Nikola auto commit.
Source commit: d6f42d43ca7d5e08548c1654ba2dcf3e17956789
Nikola version: 8.1.1

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </header><div class="p-summary entry-summary">
     <div>
-<p>This post will walk you through the steps required to set up a website built with Nikola and hosted on Github Pages. Like any project, it begins with yak shaving.</p>
+<p>This post will walk you through the steps required to set up a website built with Nikola and hosted on GitHub Pages. Like any project, it begins with yak shaving.</p>
 <p class="more"><a href="posts/set-up-a-website-with-nikola-and-github-pages/">Read more…</a></p>
 </div>
     </div>
