Nikola auto commit.
Source commit: 7220c3900cd01b24c13beafacecf67ca6e0dfa31
Nikola version: 8.1.1

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ Pick me up and turn me around</p>
 
  
  
-<div id="ba8b8946-3fbd-4493-bd40-9972f12a2445"></div>
+<div id="346d38f7-65de-4d18-8fd7-33e14ce1c79b"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#ba8b8946-3fbd-4493-bd40-9972f12a2445');
+var element = $('#346d38f7-65de-4d18-8fd7-33e14ce1c79b');
 </script><script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "2475d58090514429a41a0b06aec2b897", "version_major": 2, "version_minor": 0}
 </script>
@@ -189,7 +189,7 @@ var element = $('#ba8b8946-3fbd-4493-bd40-9972f12a2445');
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML" integrity="sha384-3lJUsx1TJHt7BA4udB5KPnDrlkO8T6J6v/op7ui0BbCjvZ9WqV4Xm6DTP6kQ/iBH" crossorigin="anonymous"></script><script type="text/x-mathjax-config">
         MathJax.Hub.Config({tex2jax: {inlineMath: [['$latex ','$'], ['\\(','\\)']]}});
         </script><footer id="footer"><p>Contents © 2020         <a href="mailto:geoterramodern@gmail.com">Terra Modern</a> - Powered by         <a href="https://getnikola.com" rel="nofollow" target="_blank">Nikola</a>         
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png"></a></p>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"></a></p>
             
         </footer>
 </div>
